Add Footer Content

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   <header class="header">
     Header
   </header>
-  Placeholder
+  <footer class="footer">
+    Footer
+  </footer>
 </body>
 </html>
